# bourbaki

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json
docs/: setup-llm.md
scripts/: copy-pdfjs-assets.mjs  link-claude-home.sh
sidecar/: embedder.py  requirements.txt
src/: App.css  App.tsx  pdfjsAssets.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chatgpt_session.rs  db.rs  embed_sidecar.rs  ingest.rs  lib.rs  main.rs  memory.rs  openai.rs  pdf_render.rs  selection_map.rs
src/api/: commands.ts
src/components/AgentPanel/: AgentPanel.css  AgentPanel.tsx
src/components/BookManager/: BookManager.css  BookManager.tsx
src/components/Canvas/: ChatNode.tsx  FlowCanvas.tsx  chat-node.css
src/components/Chat/: MathMessage.tsx  math-message.css
src/components/PdfViewer/: PdfViewer.tsx  pdf-viewer.css
src/components/ResolvedPanel/: ResolvedPanel.css  ResolvedPanel.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/store/: appStore.ts
tasks/: test-plan.md  todo.md
